[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/glowing_rock.png" type="Texture" id=1]
[ext_resource path="res://GlowingRock.gd" type="Script" id=2]
[ext_resource path="res://Sprites/glowing_rock_telegraph.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 33 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 33 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12.5, 11 )

[sub_resource type="Shader" id=59]
code = "shader_type canvas_item;

uniform bool active = true;
uniform float luminance_threshold = 0.4;
uniform vec4 color : hint_color = vec4(1.0, 1.0, 1.0, 1.0); // Tint color

uniform float alpha_threshold = 0.01;  // Minimum alpha value to consider

void fragment() {
    vec4 previous_color = texture(TEXTURE, UV);
    vec4 new_color = previous_color;

    // Only modify the color if the pixel is not fully transparent and the shader is active
    if (active && previous_color.a > alpha_threshold) {
        float luminance = 0.299 * previous_color.r + 0.587 * previous_color.g + 0.114 * previous_color.b;

        // Apply the color if the luminance is above the threshold
        if (luminance > luminance_threshold) {
            new_color.rgb = color.rgb;
            new_color.a = previous_color.a * color.a; // Apply the alpha from the color uniform
        }
    }

    COLOR = new_color;
}
"

[sub_resource type="ShaderMaterial" id=60]
resource_local_to_scene = true
shader = SubResource( 59 )
shader_param/active = false
shader_param/luminance_threshold = 0.45
shader_param/color = Color( 1, 0, 0, 0 )
shader_param/alpha_threshold = 0.01

[sub_resource type="Animation" id=61]
resource_name = "Flash"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="Animation" id=62]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="GlowingRock" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2, -1 )
frames = SubResource( 4 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="TelegraphTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 60 )
position = Vector2( -2, -39 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 61 )
anims/RESET = SubResource( 62 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 1, 3 )

[connection signal="body_entered" from="." to="." method="_on_GlowingRock_body_entered"]
[connection signal="timeout" from="TelegraphTimer" to="." method="_on_TelegraphTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
